# tera-rust-launcher

./: .gitignore  Cargo.toml  README.md  install-linux-deps.sh  tera-rust-launcher.code-workspace
autoupdater/: Cargo.toml
autoupdater/src/: main.rs
launcher-bridge/: Cargo.toml
launcher-bridge/.cargo/: config.toml
launcher-bridge/src/: main.rs
teralaunch/: tera_config.ini
teralaunch/src/: app.js  home.html  index.css  index.html  login.css  login.html  translations.json  ui.js  utils.js
teralaunch/src-tauri/: Cargo.toml  WebLink.json  tauri.conf.json
teralaunch/src-tauri/src/: auth_handler.rs  config_handler.rs  file_handler.rs  game_handler.rs  main.rs
teralib/: Cargo.toml
teralib/src/: lib.rs
teralib/src/config/: config.json
teralib/src/game/: mod.rs
