[workspace]
# Standalone crate — excluded from the parent workspace so the Linux host
# toolchain does not try to compile this Win32-only binary natively.

[package]
name = "launcher-bridge"
version = "0.1.0"
edition = "2021"
description = "Win32 IPC bridge between native Linux launcher and Tera.exe running under Wine"

[[bin]]
name = "launcher-bridge"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
log = "0.4"
once_cell = "1"
prost = "0.12"
reqwest = { version = "0.12", features = ["json"] }
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "winuser", "libloaderapi", "windef", "minwindef", "handleapi", "synchapi", "errhandlingapi", "winbase"] }
